dts: arm: nordic: Add regions and granularity to SPU
This adds information about the SPU hardware  with the number of
lockable regions and granularity to the SPU node in the device tree.

Signed-off-by: Sigvart Hovland <sigvart.hovland@nordicsemi.no>

--- a/dts/arm/nordic/nrf9160.dtsi
+++ b/dts/arm/nordic/nrf9160.dtsi
@@ -109,6 +109,8 @@
 			compatible = "nordic,nrf-spu";
 			reg = <0x50003000 0x1000>;
 			interrupts = <3 1>;
+			ram-regions = <32 8>;
+			flash-regions = <32 32>;
 			status = "okay";
 		};
 
