--- a/dts/arm/nordic/nrf5340_cpuapp.dtsi
+++ b/dts/arm/nordic/nrf5340_cpuapp.dtsi
@@ -97,6 +97,8 @@
 			compatible = "nordic,nrf-spu";
 			reg = <0x50003000 0x1000>;
 			interrupts = <3 1>;
+			ram-regions = <64 8>;
+			flash-regions = <64 16>;
 			status = "okay";
 		};
 
