Hello world test + changes to dfu/boot/mcuboot.c

--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -1,1 +1,41 @@
 # nothing here
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_FLASH=y
+CONFIG_NORDIC_QSPI_NOR=y
+CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
+CONFIG_ASSERT=y
+CONFIG_FLASH=y
+CONFIG_IMG_ERASE_PROGRESSIVELY=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+CONFIG_PM_EXTERNAL_FLASH=y
+CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="MX25R64"
+#CONFIG_PM_EXTERNAL_FLASH_SIZE=0x10000
+CONFIG_PM_EXTERNAL_FLASH_SIZE=0xf4000
+CONFIG_PM_EXTERNAL_FLASH_BASE=0
+CONFIG_LOG=y
+# CONFIG_LOG_MINIMAL is not set
+# CONFIG_LOG_RUNTIME_FILTERING is not set
+CONFIG_LOG_OVERRIDE_LEVEL=0
+CONFIG_LOG_MAX_LEVEL=4
+# CONFIG_LOG_MIPI_SYST_ENABLE is not set
+CONFIG_LOG_BACKEND_SHOW_COLOR=y
+CONFIG_LOG_BACKEND_FORMAT_TIMESTAMP=y
+CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
+
+#
+# Prepend log message with function name
+#
+# CONFIG_LOG_FUNC_NAME_PREFIX_ERR is not set
+# CONFIG_LOG_FUNC_NAME_PREFIX_WRN is not set
+# CONFIG_LOG_FUNC_NAME_PREFIX_INF is not set
+CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
+# end of Prepend log message with function name
+
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_IMMEDIATE=y
+# CONFIG_LOG_IMMEDIATE_CLEAN_OUTPUT is not set
+# CONFIG_LOG_ENABLE_FANCY_OUTPUT_FORMATTING is not set
+CONFIG_LOG_DOMAIN_ID=0
+# CONFIG_LOG_FRONTEND is not set
+CONFIG_LOG_BACKEND_UART=y
